plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.10'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.repomon'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // data
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.10'
//	testImplementation 'com.github.kstyrc:embedded-redis:0.6'


    // security
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // jjwt
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'com.sun.xml.bind:jaxb-impl:4.0.1'
    implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'

    //swagger
    implementation 'io.springfox:springfox-boot-starter:3.0.0'

    // github
    implementation 'org.kohsuke:github-api:1.314'

    // validation
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.6'

}

tasks.named('test') {
    useJUnitPlatform()
}

task copyPrivate(type: Copy) {
    copy {
        from '../final-sub'
        include '*.yml'
        include '*.sql'
        include '*.properties'
        into 'src/main/resources'
    }
}

task copyPrivateTest(type: Copy) {
    copy {
        from '../final-sub'
        include '*.yml'
        include '*.properties'
        into 'src/test/resources'
    }
}